-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b33
Heap sizing heuristics sometimes select a larger MaxHeapSize that is larger than available physical memory, leading to the VM being killed by the OS (VM crash).
Fix this.
Discussion thread at http://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2017-October/020658.html
Fix this.
Discussion thread at http://mail.openjdk.java.net/pipermail/hotspot-gc-dev/2017-October/020658.html