8190283: Default heap sizing options select a MaxHeapSize larger than available physical memory in some cases

Reviewed-by: tschatzl, sjohanss